# pr-review-skill

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.codex-plugin/: marketplace.json
.github/workflows/: test.yml
plugins/pr-review/.claude-plugin/: plugin.json
plugins/pr-review/.codex-plugin/: plugin.json
plugins/pr-review/skills/recipe-pr-review/: SKILL.md
plugins/pr-review/skills/recipe-pr-review/agents/: openai.yaml
plugins/pr-review/skills/recipe-pr-review/references/: code-review-conventions.md  codex.md  default-config.yaml  default-quality.yaml  quality-authoring.md  reviewer-system-prompt.md
plugins/pr-review/skills/recipe-pr-review/schemas/: review-result.schema.json
plugins/pr-review/skills/recipe-pr-review/scripts/: bootstrap-config.py  cleanup-context.py  collect-pr-context.py  get-review-material.py  normalize-review.py  post-comments.py  pr_review_config.py  run-review.py
plugins/pr-review/skills/recipe-pr-review/scripts/guard-plugin/: settings.json.template
plugins/pr-review/skills/recipe-pr-review/scripts/guard-plugin/scripts/: require-final-json.py
samples/github-actions/: claude-code-review.yml  codex-review.yml
tests/: conftest.py  test_config.py  test_context_and_materials.py  test_guard_and_merge.py  test_metadata.py  test_normalize_review.py  test_post_comments.py  test_run_review.py
